# apps/backend/src/modules/trips/domain/entities/trip.entity.ts
@@ -1,0 +1,11 @@
+import { TripStatus } from '../enums';
+
+export interface Trip {
+  id: number;
+  routeId: number;
+  vehicleId: number;
+  departureTime: Date;
+  arrivalTime: Date;
+  basePrice: number;
+  status: TripStatus;
+}
